[gd_scene load_steps=11 format=3 uid="uid://cgahmov2qymqc"]

[ext_resource type="Script" uid="uid://v768gfegapgo" path="res://scenes/screens/intro/controls.gd" id="1_dm43g"]
[ext_resource type="PackedScene" uid="uid://bphoyane6rivp" path="res://scenes/objects/Controls.tscn" id="3_w2504"]
[ext_resource type="SpriteFrames" uid="uid://254n46ybdat3" path="res://assets/sprites/player_anims.tres" id="4_875hr"]
[ext_resource type="Texture2D" uid="uid://11oyggjs5nsx" path="res://assets/backgrounds/parchment.png" id="4_dm43g"]
[ext_resource type="Texture2D" uid="uid://d3vh0t3va5w8f" path="res://assets/sprites/wasd.png" id="5_3w8ji"]
[ext_resource type="Texture2D" uid="uid://b6vq5quhtu8fi" path="res://assets/sprites/Interact.png" id="6_xh8qq"]
[ext_resource type="Texture2D" uid="uid://b071qob48pp41" path="res://assets/sprites/jump.png" id="7_6q3xq"]
[ext_resource type="Texture2D" uid="uid://bwur0hv0gquk3" path="res://assets/sprites/sprint.png" id="8_64qkq"]
[ext_resource type="Script" uid="uid://bywymd2memeqs" path="res://scenes/screens/intro/timer_continue.gd" id="9_xh8qq"]

[sub_resource type="Curve2D" id="Curve2D_a4hby"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -72, 0, 0, 0, 0, 0, 72, 0)
}
point_count = 2

[node name="Node2D" type="Node2D"]
script = ExtResource("1_dm43g")

[node name="Path2D" type="Path2D" parent="."]
visible = false
curve = SubResource("Curve2D_a4hby")

[node name="Controls" parent="." instance=ExtResource("3_w2504")]
visible = false
position = Vector2(0, -54)
scale = Vector2(0.25, 0.25)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(5, 5)

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -78.0
offset_top = -97.0
offset_right = 84.0
offset_bottom = -74.0
text = "thanks for pressing E"

[node name="Spawn1" type="Node2D" parent="."]
position = Vector2(-27, -1)

[node name="Spawn0" type="Node2D" parent="."]
position = Vector2(-132, -1)

[node name="Parchment" type="Sprite2D" parent="."]
position = Vector2(0, -0.499995)
scale = Vector2(0.167, 0.167593)
texture = ExtResource("4_dm43g")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 5)
scale = Vector2(0.75, 0.75)
sprite_frames = ExtResource("4_875hr")
animation = &"idle_right"
autoplay = "idle_right"
frame = 2
frame_progress = 0.865781

[node name="ControlIcons" type="Node" parent="."]

[node name="Wasd" type="Sprite2D" parent="ControlIcons"]
position = Vector2(-120, -66)
scale = Vector2(0.015, 0.015)
texture = ExtResource("5_3w8ji")

[node name="Interact" type="Sprite2D" parent="ControlIcons"]
position = Vector2(126, -67)
scale = Vector2(0.0145, 0.0145)
texture = ExtResource("6_xh8qq")

[node name="Jump" type="Sprite2D" parent="ControlIcons"]
position = Vector2(126, 36)
scale = Vector2(0.096, 0.096)
texture = ExtResource("7_6q3xq")

[node name="Sprint" type="Sprite2D" parent="ControlIcons"]
position = Vector2(-120, 35)
scale = Vector2(0.016, 0.016)
texture = ExtResource("8_64qkq")

[node name="ControlText" type="Node" parent="."]

[node name="wasd_label" type="Label" parent="ControlText"]
offset_left = -143.0
offset_top = -47.0
offset_right = -59.0
offset_bottom = -24.6667
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Movement"

[node name="wasd_label2" type="Label" parent="ControlText"]
offset_left = -143.0
offset_top = -34.0
offset_right = 213.0
offset_bottom = 14.0
scale = Vector2(0.25, 0.25)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Pindutin ang A upang tahakin ang silangan
Pindutin ang D upang lakbayin ang kanluran"

[node name="e_label" type="Label" parent="ControlText"]
offset_left = 105.0
offset_top = -47.0
offset_right = 189.0
offset_bottom = -24.6667
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "E - Interact"

[node name="space_label" type="Label" parent="ControlText"]
offset_left = 97.0
offset_top = 56.0
offset_right = 196.0
offset_bottom = 78.3333
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Space - Jump"

[node name="shift_label" type="Label" parent="ControlText"]
offset_left = -144.0
offset_top = 56.0
offset_right = -45.0
offset_bottom = 78.3333
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Shift - Sprint"

[node name="continue" type="Label" parent="ControlText"]
offset_left = -52.0
offset_top = 40.0
offset_right = 158.0
offset_bottom = 62.3333
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Click anywhere to continue"
script = ExtResource("9_xh8qq")

[node name="Timer" type="Timer" parent="ControlText/continue"]
autostart = true

[node name="e_label2" type="Label" parent="ControlText"]
offset_left = 19.0
offset_top = -36.0
offset_right = 535.0
offset_bottom = 37.0
scale = Vector2(0.25, 0.25)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "                                       Pindutin ang E upang galugarin ang mundong 
                                                                                          walang  kabatiran
                                                      EN: Press E to explore a hidden world"

[node name="shift_label2" type="Label" parent="ControlText"]
offset_left = -144.0
offset_top = 70.0
offset_right = 212.0
offset_bottom = 118.0
scale = Vector2(0.25, 0.25)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Pindutin ang Shift at kumapit sa patalim 
EN: Press Shift to sprint headfirst into danger"

[node name="space_label2" type="Label" parent="ControlText"]
offset_left = 37.0
offset_top = 70.0
offset_right = 476.0
offset_bottom = 118.0
scale = Vector2(0.25, 0.25)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "      Pindutin ang Space upang lumukso mula sa mga tinik
                EN: Press Space to rise above stone and shadow"

[node name="wasd_label3" type="Label" parent="ControlText"]
offset_left = -143.0
offset_top = -18.0
offset_right = 226.0
offset_bottom = 30.0
scale = Vector2(0.25, 0.25)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "EN: Press A to get left behind in imagination
EN: Press D to find the right keys to destiny"

[connection signal="timeout" from="ControlText/continue/Timer" to="ControlText/continue" method="_on_timer_timeout"]
